# u-boot

./: .gitignore  Dockerfile  Makefile  boards.cfg  build.sh
arch/mips/lib/: bootm.c  spl.c
board/ingenic/ad100_base/: Makefile  board.c  config.mk  partitions.tab
board/ingenic/burner_a1/: board.c
board/ingenic/burner_jz4780/: board.c
board/ingenic/burner_m200/: board.c
board/ingenic/burner_t41/: board.c
board/ingenic/burner_x1630/: board.c
board/ingenic/crealityk1/: board.c  partitions.tab
board/ingenic/gewu/: board.c
board/ingenic/halley5/: board.c
board/ingenic/halley5.android/: partitions.tab
board/ingenic/halley6/: board.c
board/ingenic/kale/: board.c
board/ingenic/robam_x2100/: board.c
board/ingenic/viomiv2000/: board.c
board/ingenic/x1600_base/: partitions.tab
board/ingenic/x2580_base/: Makefile  board.c  config.mk  partitions.tab
board/ingenic/x2600_base/: board.c
board/ingenic/x2600_halley/: Makefile  board.c  config.mk
board/ingenic/x2600_halley7/: Makefile  board.c
board/ingenic/x2600_tucana/: board.c
board/ingenic/x2600e_halley/: board.c  config.mk
board/ingenic/x2600e_tucana/: board.c
board/ingenic/x2600h_halley7/: Makefile  board.c  config.mk
board/ingenic/x2600m_halley7/: Makefile  board.c  config.mk
board/ingenic/x2660_halley/: Makefile  board.c  config.mk
board/ingenic/x2670_halley/: board.c
board/ingenic/x2670_hare/: board.c  config.mk
board/ingenic/x2670m_hare/: Makefile
common/: Makefile  cmd_bootm.c  cmd_efuse.c  cmd_jz_vpu.c  cmd_nor_sfc.c  cmd_sfcnand.c  cmd_usb.c  cmd_usb_load.c  cmd_usbprinter.c  cmd_usbserial.c  env_sfcnand_partition.c  image.c  lcd.c  main.c  usb_load.c
common/spl/: Makefile  spl.c  spl_auto_args_mem.c  spl_auto_modify_mem.c  spl_efuse.c  spl_jzsdhci.c  spl_mmc.c  spl_ota_kunpeng.c  spl_ota_kunpeng.h  spl_printf.c  spl_rtos_argument.h  spl_sfc_nand.c  spl_sfc_nand_v2.c  spl_sfc_nor.c  spl_sfc_nor_v2.c  usb_boot.c  x2600_riscv.h  x2600_riscv.hex
drivers/gpio/: jz_gpio_common.c
drivers/gpio/jz_gpio/: ad100_gpio.c  m200_gpio.c  m300_gpio.c  x1600_gpio.c  x2000_gpio.c  x2000_v12_gpio.c  x2100_gpio.c  x2580_gpio.c  x2600_gpio.c
drivers/misc/: Makefile  x1000_efuse.c  x2000_efuse.c  x2500_efuse.c
drivers/mtd/: mtdpart.c
drivers/mtd/nand/: jz_spinand.c
drivers/mtd/ubi/: misc.c
drivers/net/: Makefile
drivers/pwm/: jz_pwm_v2.c
drivers/rtc/: jz47xx_rtc.c
drivers/scboot/jz_sec_boot/: scboot.c  secall.h
drivers/scboot/jz_sec_v1/: Makefile  aes.c  ckey_aes.c  cmd_sctest.c  flash.c  get_rn.c  otp.c  otp.h  scboot.c  secure.c  spi_checksum.c  test_common.c  test_otp.c  test_scboot.c
drivers/scboot/jz_sec_v2/: cmd_burn_key.c  otp.c  otp.h  scboot.c  secall.h  secure.c
drivers/scboot/jz_sec_v3/: otp.c  otp.h  scboot.c  secall.h  secure.c
drivers/scboot/jz_sec_v4/: bignum.c  ckey_aes.c  flash.c  jz_pdma.h  otp.c  otp.h  pdma.hex  sc.h  scboot.c  secure.c  spi_checksum.c
drivers/usb/gadget/: Makefile  f_acm.c  f_fastboot.c  f_jz_cloner.c  g_printer.c  g_serial.c  jz47xx_dwc2_regs.h  jz47xx_dwc2_udc.c
drivers/usb/host/: dwc2.c
drivers/usb/phy/: Makefile  m300_phy.c  x1600_phy.c  x2000_phy.c  x2600_phy.c
drivers/video/: Makefile
drivers/video/jz_lcd/: backlight_pwm.c  jz_lcd_v14.c
drivers/video/jz_vpu/: jz_felix_drv.c  jz_felix_drv.h
drivers/watchdog/: Makefile  ad100_wdt.c  jz_wdt.c
include/: common.h  efuse.h  image.h  spl.h  ubi_uboot.h  usb.h
include/cloner/: cloner.h
include/configs/: ad100_base.h  ad100_base_common.h  ad100_slt_common.h  burner_a1.h  burner_common.h  burner_jz4775.h  burner_jz4780.h  burner_m200.h  burner_t20.h  burner_t21.h  burner_t30.h  burner_t31.h  burner_t41.h  burner_x1000.h  burner_x1021.h  burner_x1500.h  burner_x1520.h  burner_x1521.h  burner_x1600.h  burner_x1630.h  burner_x1800.h  burner_x1830.h  burner_x2000.h  burner_x2000_v12.h  burner_x2100.h  burner_x2500.h  burner_x2580.h  burner_x2600.h  crealityk1.h  darwin.h  eagle.h  epd.h  fir.h  fullcolor.h  gander.h  gewu.h  halley2.h  halley2_kunpeng.h  halley5.android.h  hippo.h  (+42 more)
include/ddr/: ddr_chips_v2.h  ddr_common.h  ddrc_x2000.h  ddrp_inno.h
include/ddr/chips-v2/: DDR2_M14D1G1664A.h  DDR2_M14D2561616A.h  DDR2_M14D5121632A.h  DDR2_M14F5121632A.h  DDR2_SCKL18T512XX0AAE1.h  DDR2_W971GV6NG.h  DDR2_W975116NG18I.h  DDR2_W9751V6NG.h  DDR3L_GDP1BFLM-CB.h  DDR3L_W631GU6RG.h  DDR3L_W632GU6QG-11.h  DDR3L_W634GU6QB-11.h  DDR3L_W634GU6QG-11.h  DDR3_M15T1G1664A.h  DDR3_NK5CC128M8HKX.h  DDR3_NT5CB128M16JR.h  DDR3_PMF512816FBR-MBDN.h  DDR3_W631GU6NG.h  DDR3_W632GU6NG_T.h  LPDDR2_M54D5121632A.h  LPDDR2_SCB4BL256160AFL19GI.h  LPDDR2_SCKX4BL512160AAC.h  LPDDR2_W97BV6MK.h  LPDDR3_NK6CL256M16DKX-H1.h  LPDDR3_W63AH6NKB-BI.h  LVDDR2_A3L28E40BGD-AHJA.h  LVDDR_W9464L6KH-5I.h  X1600EN_DDR2_COMPATIBLE_PARAM.h  X1600E_LPDDR2_COMPATIBLE_PARAM.h  X1600HN_DDR2_COMPATIBLE_PARAM.h  X1660L_LVDDR_COMPATIBLE_PARAM.h  X2100_LPDDR2_64M_COMPATIBLE_PARAM.h  X2600E_DDR3_256M_COMPATIBLE_PARAM.h  X2600H_DDR3L_512M_COMPATIBLE_PARAM.h  X2600M_DDR2_64M_COMPATIBLE_PARAM.h  X2600N_DDR3_128M_COMPATIBLE_PARAM.h  X2600_DDR3_128M_COMPATIBLE_PARAM.h  X2670M_DDR2_COMPATIBLE_PARAM.h  X2670N_DDR3_128M_COMPATIBLE_PARAM.h  ddr_chip.h
include/jz_lcd/: jz_dsim.h
include/usb/: ingenic_phy.h  jz47xx_dwc2_udc.h
include/usb_boot/: otg_dwc2.h  usb_boot.h
lib/lzma/: LzmaTools.c  LzmaTools.h
make_spl/: CMakeLists.txt  README.md  copy_spl.py  mips-gcc-sde-elf.cmake
make_spl/cmake/: host-tools.cmake  mips.cmake
spl/: Makefile
tools/ingenic-tools/: Makefile  gpt_creator.c  mmc_params.c  sfc_nor_builtin_params.c  sfc_timing_params.c  spi_checksum.c  spl_params_fixer_ad100.c  spl_params_fixer_x2500.c  spl_params_fixer_x2580.c  spl_params_fixer_x2600.c
tools/ingenic-tools/ddr_creator/: ddr_params_creator.c
tools/ingenic-tools/ddr_creator_a1/: ddr_params_creator.c
tools/ingenic-tools/ddr_creator_x1600/: ddr2_params.c  ddr_params_creator.c  lpddr2_params.c  supported_ddr_chips.c
tools/ingenic-tools/ddr_creator_x2000/: ddr2_params.c  ddr3_params.c  ddr_params_creator.c  ddr_params_creator.h  lpddr2_params.c  (+2 more)
(+267 files in other folders)
